--- a/styles.css
+++ b/styles.css
@@ -315,7 +315,7 @@ nav ul li a:hover {
 
 /* start: Funny tournament styles */
 #tournament {
-    background: url('https://th.bing.com/th/id/R.6e9907570d308efa387fd1dea26bb66d?rik=Q3%2bw4LlWH2BRjg&riu=http%3a%2f%2fwallpapercave.com%2fwp%2fKbv4Bd2.jpg&ehk=36Y2LDln%2fte8swkov%2fglpbGB39rrLV8naum5WHBwqDI%3d&risl=&pid=ImgRaw&r=0') top right no-repeat;
+    background: url('https://cdn.wallpapersafari.com/16/69/sAfv5P.jpg') top right no-repeat;
     padding: 125px 0 105px;
 }
 
